tests/pos/objects/obj-subtype-01.ts
/*@ foo :: ({x:number; y: boolean}) => {x: number} */ 
function foo(o) {
    return o;
}
