tests/neg/objects/11-object.ts

/*@ foo :: (o: { x:number; }) => { x: number; y: boolean;  } */
export function foo(o: any): any {

    return o;
}
